--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT=8000
 DATABASE=mongodb+srv://admin:kAaRoaAiyJ1r069w@cluster0.x0u75.gcp.mongodb.net/fullsiteDB?retryWrites=true&w=majority
 MAILGUN_APIKEY=f0a4d659f45893b705717de36b0476f3-ea44b6dc-a84d3c8b
 JWT_ACC_ACTIVATE=ismailsntrk1
-CLIENT_URL=http//:localhost:3000
+CLIENT_URL=https://ubiquitous-chebakia-add3da.netlify.app
 RESET_PASSWORD_KEY=resetpasskey12
 COOKIE_TOKEN=cookietoken
 LOGIN_TOKEN=ismailsntrk
